--- a/src/main/resources/templates/gifticon/list-search.html
+++ b/src/main/resources/templates/gifticon/list-search.html
@@ -46,38 +46,67 @@
                             <div class="filter-category-container">
                                 <div class="filter__category-wrapper">
 
-                                    <button class="btn filter__btn filter__btn--style-1 js-checked" type="button" data-filter="*">전체</button></div>
+                                    <button class="btn filter__btn filter__btn--style-1 js-checked" type="button"
+                                            data-filter="*">전체
+                                    </button>
+                                </div>
                                 <div class="filter__category-wrapper">
 
-                                    <button class="btn filter__btn filter__btn--style-1" type="button" data-filter=".headphone">음료</button></div>
+                                    <button class="btn filter__btn filter__btn--style-1" type="button"
+                                            data-filter=".headphone">음료
+                                    </button>
+                                </div>
                                 <div class="filter__category-wrapper">
 
-                                    <button class="btn filter__btn filter__btn--style-1" type="button" data-filter=".smartphone">맥도날드</button></div>
+                                    <button class="btn filter__btn filter__btn--style-1" type="button"
+                                            data-filter=".smartphone">맥도날드
+                                    </button>
+                                </div>
                                 <div class="filter__category-wrapper">
 
-                                    <button class="btn filter__btn filter__btn--style-1" type="button" data-filter=".sportgadget">카테고리</button></div>
+                                    <button class="btn filter__btn filter__btn--style-1" type="button"
+                                            data-filter=".sportgadget">카테고리
+                                    </button>
+                                </div>
                                 <div class="filter__category-wrapper">
 
-                                    <button class="btn filter__btn filter__btn--style-1" type="button" data-filter=".dslr">브랜드?</button></div>
+                                    <button class="btn filter__btn filter__btn--style-1" type="button"
+                                            data-filter=".dslr">브랜드?
+                                    </button>
+                                </div>
                             </div>
 
 
                             <div class="filter__grid-wrapper u-s-m-t-30">
                                 <div id="row-product-div" class="row">
-                                    <div id="item-div" class="col-xl-3 col-lg-4 col-md-6 col-sm-6 u-s-m-b-30 filter__item">
+                                    <div id="item-div"
+                                         class="col-xl-3 col-lg-4 col-md-6 col-sm-6 u-s-m-b-30 filter__item">
                                         <div id="product-div" class="product-o product-o--hover-on product-o--radius">
 
                                             <div id="imageAndModal-product-div" class="product-o__wrap">
-                                                <a id="image-product-a" class="aspect aspect--bg-grey aspect--square u-d-block">
-                                                    <img class="aspect__img" src="images/product/electronic/product2.jpg" alt="">
+                                                <a id="image-product-a"
+                                                   class="aspect aspect--bg-grey aspect--square u-d-block">
+                                                    <img class="aspect__img"
+                                                         src="images/product/electronic/product2.jpg" alt="">
                                                 </a>
 
                                                 <div id="action-product-div" class="product-o__action-wrap">
                                                     <ul class="product-o__action-list">
-                                                        <li><a data-modal="modal" data-modal-id="#quick-look" data-tooltip="tooltip" data-placement="top" title="Quick View"><i class="fas fa-search-plus"></i></a></li>
-                                                        <li><a data-modal="modal" data-modal-id="#add-to-cart" data-tooltip="tooltip" data-placement="top" title="Add to Cart"><i class="fas fa-plus-circle"></i></a></li>
-                                                        <li><a href="account/login.html" data-tooltip="tooltip" data-placement="top" title="Add to Wishlist"><i class="fas fa-heart"></i></a></li>
-                                                        <li><a href="account/login.html" data-tooltip="tooltip" data-placement="top" title="Email me When the price drops"><i class="fas fa-envelope"></i></a></li>
+                                                        <li><a data-modal="modal" data-modal-id="#quick-look"
+                                                               data-tooltip="tooltip" data-placement="top"
+                                                               title="Quick View"><i class="fas fa-search-plus"></i></a>
+                                                        </li>
+                                                        <li><a data-modal="modal" data-modal-id="#add-to-cart"
+                                                               data-tooltip="tooltip" data-placement="top"
+                                                               title="Add to Cart"><i
+                                                                class="fas fa-plus-circle"></i></a></li>
+                                                        <li><a href="account/login.html" data-tooltip="tooltip"
+                                                               data-placement="top" title="Add to Wishlist"><i
+                                                                class="fas fa-heart"></i></a></li>
+                                                        <li><a href="account/login.html" data-tooltip="tooltip"
+                                                               data-placement="top"
+                                                               title="Email me When the price drops"><i
+                                                                class="fas fa-envelope"></i></a></li>
                                                     </ul>
                                                 </div>
                                             </div>
