--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -306,58 +306,8 @@
         </div>
         <!--====== End - Section 3 ======-->
 
-        <!--====== Section 12 ======-->
-        <div class="u-s-p-b-60">
-
-            <!--====== Section Content ======-->
-            <div class="section__content">
-                <div class="container">
-
-                    <!--====== Brand Slider ======-->
-                    <div class="slider-fouc">
-                        <div class="owl-carousel" id="brand-slider" data-item="5">
-                            <div class="brand-slide">
-
-                                <a href="shop-side-version-2.html">
-
-                                    <img src="images/brand/b1.png" alt=""></a></div>
-                            <div class="brand-slide">
-
-                                <a href="shop-side-version-2.html">
-
-                                    <img src="images/brand/b2.png" alt=""></a></div>
-                            <div class="brand-slide">
-
-                                <a href="shop-side-version-2.html">
-
-                                    <img src="images/brand/b3.png" alt=""></a></div>
-                            <div class="brand-slide">
-
-                                <a href="shop-side-version-2.html">
-
-                                    <img src="images/brand/b4.png" alt=""></a></div>
-                            <div class="brand-slide">
-
-                                <a href="shop-side-version-2.html">
-
-                                    <img src="images/brand/b5.png" alt=""></a></div>
-                            <div class="brand-slide">
-
-                                <a href="shop-side-version-2.html">
-
-                                    <img src="images/brand/b6.png" alt=""></a></div>
-                        </div>
-                    </div>
-                    <!--====== End - Brand Slider ======-->
-                </div>
-            </div>
-            <!--====== End - Section Content ======-->
-        </div>
-        <!--====== End - Section 12 ======-->
-
         <!--====== Section 2 ======-->
         <div class="u-s-p-b-60">
-
             <!--====== Section Intro ======-->
             <div class="section__intro u-s-m-b-16">
                 <div class="container">
@@ -408,65 +358,39 @@
                                                     <img class="aspect__img" src="images/product/electronic/product2.jpg" alt=""></a>
                                                 <div class="product-o__action-wrap">
                                                     <ul class="product-o__action-list">
-                                                        <li>
-
-                                                            <a data-modal="modal" data-modal-id="#quick-look" data-tooltip="tooltip" data-placement="top" title="Quick View"><i class="fas fa-search-plus"></i></a></li>
-                                                        <li>
-
-                                                            <a data-modal="modal" data-modal-id="#add-to-cart" data-tooltip="tooltip" data-placement="top" title="Add to Cart"><i class="fas fa-plus-circle"></i></a></li>
-                                                        <li>
-
-                                                            <a href="account/login.html" data-tooltip="tooltip" data-placement="top" title="Add to Wishlist"><i class="fas fa-heart"></i></a></li>
-                                                        <li>
-
-                                                            <a href="account/login.html" data-tooltip="tooltip" data-placement="top" title="Email me When the price drops"><i class="fas fa-envelope"></i></a></li>
+                                                        <li><a data-modal="modal" data-modal-id="#quick-look" data-tooltip="tooltip" data-placement="top" title="Quick View"><i class="fas fa-search-plus"></i></a></li>
+                                                        <li><a data-modal="modal" data-modal-id="#add-to-cart" data-tooltip="tooltip" data-placement="top" title="Add to Cart"><i class="fas fa-plus-circle"></i></a></li>
+                                                        <li><a href="account/login.html" data-tooltip="tooltip" data-placement="top" title="Add to Wishlist"><i class="fas fa-heart"></i></a></li>
                                                     </ul>
                                                 </div>
                                             </div>
 
                                             <span class="product-o__category">
-
                                                     <a href="shop-side-version-2.html">Electronics</a></span>
-
                                             <span class="product-o__name">
 
                                                     <a href="product-detail.html">Red Wireless Headphone</a></span>
                                             <div class="product-o__rating gl-rating-style"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
-
                                                 <span class="product-o__review">(23)</span></div>
-
                                             <span class="product-o__price">$125.00
-
                                                     <span class="product-o__discount">$160.00</span></span>
                                         </div>
                                     </div>
                                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 u-s-m-b-30 filter__item headphone">
                                         <div class="product-o product-o--hover-on product-o--radius">
                                             <div class="product-o__wrap">
-
                                                 <a class="aspect aspect--bg-grey aspect--square u-d-block" href="product-detail.html">
-
                                                     <img class="aspect__img" src="images/product/electronic/product3.jpg" alt=""></a>
                                                 <div class="product-o__action-wrap">
                                                     <ul class="product-o__action-list">
-                                                        <li>
-
-                                                            <a data-modal="modal" data-modal-id="#quick-look" data-tooltip="tooltip" data-placement="top" title="Quick View"><i class="fas fa-search-plus"></i></a></li>
-                                                        <li>
-
-                                                            <a data-modal="modal" data-modal-id="#add-to-cart" data-tooltip="tooltip" data-placement="top" title="Add to Cart"><i class="fas fa-plus-circle"></i></a></li>
-                                                        <li>
-
-                                                            <a href="account/login.html" data-tooltip="tooltip" data-placement="top" title="Add to Wishlist"><i class="fas fa-heart"></i></a></li>
-                                                        <li>
-
-                                                            <a href="account/login.html" data-tooltip="tooltip" data-placement="top" title="Email me When the price drops"><i class="fas fa-envelope"></i></a></li>
+                                                        <li><a data-modal="modal" data-modal-id="#quick-look" data-tooltip="tooltip" data-placement="top" title="Quick View"><i class="fas fa-search-plus"></i></a></li>
+                                                        <li><a data-modal="modal" data-modal-id="#add-to-cart" data-tooltip="tooltip" data-placement="top" title="Add to Cart"><i class="fas fa-plus-circle"></i></a></li>
+                                                        <li><a href="account/login.html" data-tooltip="tooltip" data-placement="top" title="Add to Wishlist"><i class="fas fa-heart"></i></a></li>
                                                     </ul>
                                                 </div>
                                             </div>
 
                                             <span class="product-o__category">
-
                                                     <a href="shop-side-version-2.html">Electronics</a></span>
 
                                             <span class="product-o__name">
