fix: Local user signup

--- a/src/main/resources/templates/account/signup.html
+++ b/src/main/resources/templates/account/signup.html
@@ -52,7 +52,7 @@
                                         </div>
 
                                         <div id="result-email-div" class="u-s-m-b-10">
-                                            <label id="result-email-label" class="gl-label" style="color: red">이메일 검증 에러</label>
+                                            <label id="result-email-label" class="gl-label" style="color: teal">이메일 검증 에러</label>
                                         </div>
 
                                         <div class="gl-inline u-s-m-b-10">
