--- a/src/main/resources/templates/gifticon/list-search.html
+++ b/src/main/resources/templates/gifticon/list-search.html
@@ -43,35 +43,11 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="filter-category-container">
+                            <div class="filter-category-container" id="filter-category-container">
                                 <div class="filter__category-wrapper">
 
                                     <button class="btn filter__btn filter__btn--style-1 js-checked" type="button"
                                             data-filter="*">전체
-                                    </button>
-                                </div>
-                                <div class="filter__category-wrapper">
-
-                                    <button class="btn filter__btn filter__btn--style-1" type="button"
-                                            data-filter=".headphone">음료
-                                    </button>
-                                </div>
-                                <div class="filter__category-wrapper">
-
-                                    <button class="btn filter__btn filter__btn--style-1" type="button"
-                                            data-filter=".smartphone">맥도날드
-                                    </button>
-                                </div>
-                                <div class="filter__category-wrapper">
-
-                                    <button class="btn filter__btn filter__btn--style-1" type="button"
-                                            data-filter=".sportgadget">카테고리
-                                    </button>
-                                </div>
-                                <div class="filter__category-wrapper">
-
-                                    <button class="btn filter__btn filter__btn--style-1" type="button"
-                                            data-filter=".dslr">브랜드?
                                     </button>
                                 </div>
                             </div>
@@ -166,7 +142,13 @@
 <script src="/js/gifticon/kakao-chatbot.js"></script>
 <script src="/js/gifticon/file-add.js"></script>
 <script src="/js/gifticon/list.js"></script>
+<script src="/js/gifticon/list-search.js"></script>
 
+<script>
+    window.onload = () => {
+        setBrand("치킨");
+    }
+</script>
 
 </body>
 </html>
