--- a/src/main/resources/templates/gifticon/list-search.html
+++ b/src/main/resources/templates/gifticon/list-search.html
@@ -142,11 +142,10 @@
 <script src="/js/gifticon/kakao-chatbot.js"></script>
 <script src="/js/gifticon/file-add.js"></script>
 <script src="/js/gifticon/list.js"></script>
-<script src="/js/gifticon/list-search.js"></script>
 
 <script>
     window.onload = () => {
-        setBrand("치킨");
+        setBrand(window.location.pathname.replace("/gifticons/", ""));
     }
 </script>
 
