Feat: 브랜드명 클릭시 클릭한 브랜드명 유지되도록 변경

--- a/src/main/resources/templates/gifticon/list.html
+++ b/src/main/resources/templates/gifticon/list.html
@@ -75,7 +75,7 @@
                             <div class="filter-category-container" id="filter-category-container">
                                 <div class="filter__category-wrapper">
 
-                                    <button class="btn filter__btn filter__btn--style-1 js-checked total-filter" type="button"
+                                    <button class="btn filter__btn filter__btn--style-1 js-checked brand-filter total-filter" type="button"
                                             data-filter="*">전체
                                     </button>
                                 </div>
