Feat: 전체 카테고리 상품 조회 기능 추가

--- a/src/main/resources/templates/gifticon/list.html
+++ b/src/main/resources/templates/gifticon/list.html
@@ -147,6 +147,12 @@
 
         setProductSelectorEvent();
 
+        getTotalProducts();
+
+        document.querySelector(".total-category").addEventListener("click", function(event) {
+            getTotalProducts();
+        });
+
         const is = new IntersectionObserver((entries, observer) => {
             let page = 0;
 
