Feat: 브랜드명 전체에 이벤트 추가

--- a/src/main/resources/templates/gifticon/list.html
+++ b/src/main/resources/templates/gifticon/list.html
@@ -149,9 +149,7 @@
 
         getTotalProducts();
 
-        document.querySelector(".total-category").addEventListener("click", function(event) {
-            getTotalProducts();
-        });
+        totalFilterEvent();
 
         const is = new IntersectionObserver((entries, observer) => {
             let page = 0;
