--- a/src/main/resources/templates/gifticon/list.html
+++ b/src/main/resources/templates/gifticon/list.html
@@ -27,6 +27,10 @@
             border: red 2px solid;
         }
 
+        #product-area-div {
+            min-height: 100vh;
+        }
+
     </style>
 </head>
 <body class="config">
@@ -86,7 +90,7 @@
             </div>
             <!--====== End - Section Content ======-->
             <!--====== Section Content ======-->
-            <div class="section__content">
+            <div class="section__content" id="product-area-div">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
