Fix: 전체 카테고리 클릭시 기프티콘 불러와지지 않는 현상 수정

--- a/src/main/resources/templates/gifticon/list.html
+++ b/src/main/resources/templates/gifticon/list.html
@@ -155,6 +155,8 @@
 
         totalFilterEvent();
 
+        totalCategoryEvent();
+
         const is = new IntersectionObserver((entries, observer) => {
             let page = 0;
 
