Feat: 카테고리 선택시 브랜드 선택 위치로 이동하는 기능 추가

--- a/src/main/resources/templates/gifticon/list.html
+++ b/src/main/resources/templates/gifticon/list.html
@@ -69,7 +69,7 @@
         <!--====== End - Section 2 ======-->
 
         <!--====== Section 3 ======-->
-        <div class="u-s-p-y-60">
+        <div class="u-s-p-y-60" id="show-product-div">
             <!--====== Section Content ======-->
             <div class="section__content">
                 <div class="container">
