--- a/src/main/resources/templates/fragments/base/header.html
+++ b/src/main/resources/templates/fragments/base/header.html
@@ -1056,28 +1056,9 @@
                             </li>
 
 
-                            <li class="has-dropdown">
-                                <a>기프티콘 구매<i class="fas fa-angle-down u-s-m-l-6"></i></a>
-
-
-                                <!--====== Dropdown ======-->
-                                <span class="js-menu-toggle"></span>
-                                <ul style="width:200px">
-
-                                    <li><a href="/gifticons">전체 보기</a></li>
-                                    <li><a href="blog-right-sidebar.html">브랜드로 보기</a></li>
-                                    <li class="has-dropdown has-dropdown--ul-left-100">
-                                        <a>카테고리<i class="fas fa-angle-down i-state-right u-s-m-l-6"></i></a>
-
-                                        <!--====== Dropdown ======-->
-                                        <span class="js-menu-toggle"></span>
-                                        <ul style="width:118px">
-                                            <li><a href="/gifticons/beverage">음료</a></li>
-                                            <li><a href="/gifticons/food">식품</a></li>
-                                            <li><a href="/gifticons/food">편의점</a></li>
-                                        </ul>
-                                        <!--====== End - Dropdown ======-->
-                                    </li>
+                            <li>
+                                <a href="/gifticons">기프티콘 구매</a>
+                            </li>
 
 
 
