--- a/src/main/resources/templates/gifticon/list.html
+++ b/src/main/resources/templates/gifticon/list.html
@@ -151,7 +151,8 @@
 
         setProductSelectorEvent();
 
-        getTotalProducts();
+        clearProducts();
+        getProductByCategoryAndBrand();
 
         totalFilterEvent();
 
