feat: Add admin page

--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -8,14 +8,9 @@
     <ul class="dash__f-list">
       <li><a class="dash-active" href="admin-index.html">메인 페이지</a></li>
       <li><a href="/admin/user/config">회원 관리</a></li>
-      <li>
-        <a href="dash-track-order.html">문의 사항</a></li>
-      <li>
-
-        <a href="dash-my-order.html">이벤트 관리</a></li>
-      <li>
-
-        <a href="dash-payment-option.html">My Payment Options</a></li>
+      <li><a href="dash-track-order.html">문의 사항</a></li>
+      <li><a href="dash-my-order.html">이벤트 관리</a></li>
+      <li><a href="dash-payment-option.html">My Payment Options</a></li>
       <li>
 
         <a href="dash-cancellation.html">My Returns & Cancellations</a></li>
