--- a/src/main/resources/templates/fragments/admin/sidebar.html
+++ b/src/main/resources/templates/fragments/admin/sidebar.html
@@ -10,15 +10,10 @@
             <span class="dash__text u-s-m-b-16">관리자 목록</span>
             <ul class="dash__f-list">
                 <li><a class="" href="/admin/index">메인 페이지</a></li>
-                <li><a href="/admin/user/config">상품 관리</a></li>
+                <li><a href="/admin/product/config">상품 관리</a></li>
                 <li><a href="/admin/user/config">회원 관리</a></li>
                 <li><a href="dash-track-order.html">문의 사항 관리</a></li>
                 <li><a href="dash-my-order.html">이벤트 관리</a></li>
-                <li>
-                    <a href="dash-payment-option.html">My Payment Options</a></li>
-                <li>
-
-                    <a href="dash-cancellation.html">My Returns & Cancellations</a></li>
             </ul>
         </div>
     </div>
@@ -27,30 +22,24 @@
             <ul class="dash__w-list">
                 <li>
                     <div class="dash__w-wrap">
-
                         <span class="dash__w-icon dash__w-icon-style-1"><i class="fas fa-cart-arrow-down"></i></span>
-
                         <span class="dash__w-text">4</span>
-
-                        <span class="dash__w-name">상품 등록 신청</span></div>
+                        <span class="dash__w-name">상품 등록 신청</span>
+                    </div>
                 </li>
                 <li>
                     <div class="dash__w-wrap">
-
                         <span class="dash__w-icon dash__w-icon-style-2"><i class="fas fa-times"></i></span>
-
                         <span class="dash__w-text">0</span>
-
-                        <span class="dash__w-name">문의 사항</span></div>
+                        <span class="dash__w-name">문의 사항</span>
+                    </div>
                 </li>
                 <li>
                     <div class="dash__w-wrap">
-
                         <span class="dash__w-icon dash__w-icon-style-3"><i class="far fa-heart"></i></span>
-
                         <span class="dash__w-text">0</span>
-
-                        <span class="dash__w-name">Wishlist</span></div>
+                        <span class="dash__w-name">Wishlist</span>
+                    </div>
                 </li>
             </ul>
         </div>
