fix: Type error
due html type 에러 수정 text -> date

--- a/src/main/resources/templates/gifticon/add.html
+++ b/src/main/resources/templates/gifticon/add.html
@@ -182,7 +182,7 @@
 
                                     <div class="u-s-m-b-5">
                                         <label class="gl-label">유효 기간</label>
-                                        <input id="due-modal-input" name="due" class="news-l__input" type="text"
+                                        <input id="due-modal-input" name="due" class="news-l__input" type="date"
                                                placeholder="유효기간을 입력해주세요.">
                                     </div>
 
