fix: Complete signup

--- a/src/main/resources/templates/account/signup.html
+++ b/src/main/resources/templates/account/signup.html
@@ -48,104 +48,114 @@
                                         <div class="gl-s-api"></div>
                                         <div class="u-s-m-b-10">
                                             <label class="gl-label" for="email">이메일</label>
-                                            <input id="email" name="email" class="input-text input-text--primary-style" type="text" placeholder="이메일(아이디로 사용됩니다)">
+                                            <input id="email" name="email" class="input-text input-text--primary-style"
+                                                   type="text" placeholder="이메일(아이디로 사용됩니다)">
                                         </div>
 
                                         <div id="result-email-div" class="u-s-m-b-10">
-                                            <label id="result-email-label" class="gl-label" style="color: teal">이메일 검증 에러</label>
+                                            <label id="result-email-label" class="gl-label" style="color: teal"></label>
                                         </div>
-
 
                                         <div class="gl-inline u-s-m-b-10">
                                             <div class="password-div">
                                                 <label class="gl-label" for="password">비밀번호</label>
-                                                <input id="password" name="password" class="input-text input-text--primary-style" type="password" placeholder="특수기호, 숫자를 섞어서 8자 이상">
+                                                <input id="password" name="password"
+                                                       class="input-text input-text--primary-style" type="password"
+                                                       placeholder="특수기호, 숫자를 섞어서 8자 이상">
                                             </div>
 
                                             <div id="confirmPassword-div">
                                                 <label class="gl-label" for="confirm-password">비밀번호 확인</label>
-                                                <input id="confirm-password" name="confirm-password" class="input-text input-text--primary-style" type="password" placeholder="비밀번호">
+                                                <input id="confirm-password" name="confirm-password"
+                                                       class="input-text input-text--primary-style" type="password"
+                                                       placeholder="비밀번호">
                                             </div>
                                         </div>
 
                                         <div id="result-Password-div" class="u-s-m-b-10">
-                                            <label id="result-Password-label" class="gl-label" style="color: red"></label>
+                                            <label id="result-Password-label" class="gl-label"
+                                                   style="color: red"></label>
                                         </div>
 
                                         <div id="result-confirmPassword-div" class="u-s-m-b-10">
-                                            <label id="result-confirmPassword-label" class="gl-label" style="color: red">비밀번호 검증 에러</label>
+                                            <label id="result-confirmPassword-label" class="gl-label"
+                                                   style="color: red"></label>
                                         </div>
 
                                         <div class="gl-inline">
 
                                             <div class="u-s-m-b-15">
                                                 <label class="gl-label" for="name">닉네임</label>
-                                                <input id="nickname" name="nickname" class="input-text input-text--primary-style" type="text" placeholder="닉네임을 입력해주세요">
+                                                <input id="nickname" name="nickname"
+                                                       class="input-text input-text--primary-style" type="text"
+                                                       placeholder="닉네임을 입력해주세요">
                                             </div>
 
                                             <div class="u-s-m-b-15">
                                                 <label class="gl-label" for="name">이름</label>
-                                                <input id="name" name="name" class="input-text input-text--primary-style" type="text" placeholder="이름을 입력해주세요">
+                                                <input id="name" name="name"
+                                                       class="input-text input-text--primary-style" type="text"
+                                                       placeholder="이름을 입력해주세요">
                                             </div>
 
                                         </div>
                                         <div id="result-nickname-div" class="u-s-m-b-10">
-                                            <label id="result-nickname-label" class="gl-label" style="color: red">닉네임검증 </label>
+                                            <label id="result-nickname-label" class="gl-label"
+                                                   style="color: red"></label>
                                         </div>
 
                                         <div class="gl-inline u-s-m-b-15">
                                             <div id="tel-number">
                                                 <label class="gl-label" for="tel">전화번호</label>
-                                                <input id="tel" name="tel" class="input-text input-text--primary-style" type="text" placeholder=" '-'을 포함해주세요 ">
+                                                <input id="tel" name="tel" class="input-text input-text--primary-style"
+                                                       type="text" placeholder=" '-'을 포함해주세요 ">
                                             </div>
 
                                         </div>
-                                        <div id="result-tel-div" class="u-s-m-b-10">
-                                            <label id="result-tel-label" class="gl-label" style="color: red">휴대폰검증에러</label>
+                                        <!--                                        <div id="result-tel-div" class="u-s-m-b-10">-->
+                                        <!--                                            <label id="result-tel-label" class="gl-label" style="color: red">휴대폰검증에러</label>-->
+                                        <!--                                        </div>-->
 
-                                        </div>
                                         <div id="result-tel2-div" class="u-s-m-b-10">
-                                            <label id="result-tel2-label" class="gl-label" style="color: red">&nbsp;</label>
-
+                                            <label id="result-tel2-label" class="gl-label"
+                                                   style="color: red"></label>
                                         </div>
 
-                                        <div class="gl-dob u-s-m-b-5">
-                                            <input id="auth-phone" name="auth-phone" class="input-text input-text--primary-style" placeholder="인증번호를 입력해주세요" >
-                                           </div>
+                                        <!--                                        <div class="gl-dob u-s-m-b-5">-->
+                                        <!--                                            <input id="auth-phone" name="auth-phone" class="input-text input-text&#45;&#45;primary-style" placeholder="인증번호를 입력해주세요" >-->
+                                        <!--                                        </div>-->
 
                                         <div class="gl-inline">
                                             <div class="u-s-m-b-15">
                                                 <!--====== Date of Birth Select-Box ======-->
                                                 <span class="gl-label">생년 월일</span>
 
-                                                <div class="gl-dob u-s-m-b-15">
-                                                    <input id="birth-date" name="birthDate" class="input-text input-text--primary-style" placeholder="생년월일(8자리)">
-                                                </div>
-
-                                                <div id="result-birth-date-div" class="u-s-m-b-20">
-                                                    <label id="result-birth-date-label" class="gl-label">&nbsp;</label>
+                                                <div class="gl-dob">
+                                                    <input id="birth-date" name="birthDate"
+                                                           class="input-text input-text--primary-style"
+                                                           placeholder="생년월일(8자리)">
                                                 </div>
                                             </div>
 
                                             <div class="u-s-m-b-15">
                                                 <label class="gl-label" for="gender">성별</label>
-
-                                                <div class="gl-dob u-s-m-b-15">
-                                                    <select id="gender" name="gender" class="select-box select-box--primary-style u-w-100">
-                                                        <option selected></option>
+                                                <div class="gl-dob">
+                                                    <select id="gender" name="gender"
+                                                            class="select-box select-box--primary-style u-w-100">
+                                                        <option selected="">성별</option>
                                                         <option value="male">남자</option>
                                                         <option value="female">여자</option>
                                                     </select>
                                                 </div>
-
-                                                <div id="result-gender-div" class="u-s-m-b-20">
-                                                    <label id="result-gender-label" class="gl-label" style="color: #a90707"> &nbsp;   </label>
-                                                </div>
                                             </div>
+                                        </div>
+                                        <div id="result-birth-date-div" class="u-s-m-b-20">
+                                            <label id="result-birth-date-label" class="gl-label"></label>
                                         </div>
 
                                         <div class="u-s-m-b-15" style="display: flex; justify-content: end;">
-                                            <button id="signup-btn" class="btn btn--e-transparent-brand-b-2" >회원가입</button>
+                                            <button id="signup-btn" class="btn btn--e-transparent-brand-b-2">회원가입
+                                            </button>
                                         </div>
                                     </form>
                                 </div>
